--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,15 +9,26 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
-    <script src="js/script.js"></script>
-
+    <script src="js/scripts.js"></script>
 
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+    <div class="container">
 
+        <div class="umg_progress">
+            <div class="umg_progress-caption">
+
+            </div>
+            <div class="umg_progress-bar">
+                <div class="umg_progress-barInner" style="width: 90%"></div>
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
