--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,6 +9,7 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="js/formstyler.js"></script>
     <script src="js/scripts.js"></script>
 
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
@@ -17,15 +18,42 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="umg_container container">
 
         <div class="umg_progress">
-            <div class="umg_progress-caption">
-
-            </div>
+            <div class="umg_progress-caption">Вопрос 6 из 10</div>
             <div class="umg_progress-bar">
                 <div class="umg_progress-barInner" style="width: 90%"></div>
             </div>
+        </div>
+
+        <div class="umg_body">
+            <ul class="umg_body-list">
+                <li class="umg_body-listLi">Пьер Ришар</li>
+                <li class="umg_body-listLi">Мишель Буке</li>
+                <li class="umg_body-listLi">Фабрис Греко</li>
+                <li class="umg_body-listLi">Жак Франсуа</li>
+                <li class="umg_body-listLi">Даниэль Секкальди Очень-очень длинная фамилия</li>
+                <li class="umg_body-listLi">Шарль Жерар</li>
+                <li class="umg_body-listLi">Мишель Омон</li>
+                <li class="umg_body-listLi">Сьюзи Дайсон</li>
+                <li class="umg_body-listLi">Жерар Жюньо</li>
+                <li class="umg_body-listLi">Мишель Робен</li>
+            </ul>
+            <div class="umg_body-answer">
+                <div class="umg_body-answerCaption">— это актерский состав фильма...</div>
+                <form class="umg_body-answerList">
+                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Неудержимые»</label>
+                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Игрушка»</label>
+                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Аватар»</label>
+                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Черный лебедь»</label>
+                </form>
+                <div class="umg_body-controls">
+                    <div class="umg_button umg_button--secondary">← Назад</div>
+                    <div class="umg_button">Далее →</div>
+                </div>
+            </div>
+
         </div>
 
     </div>
