styled mobile version of the game

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -33,7 +33,7 @@
                 <li class="umg_body-listLi">Мишель Буке</li>
                 <li class="umg_body-listLi">Фабрис Греко</li>
                 <li class="umg_body-listLi">Жак Франсуа</li>
-                <li class="umg_body-listLi">Даниэль Секкальди Очень-очень длинная фамилия</li>
+                <li class="umg_body-listLi" title="Даниэль Секкальди Очень-очень длинная фамилия">Даниэль Секкальди Очень-очень длинная фамилия</li>
                 <li class="umg_body-listLi">Шарль Жерар</li>
                 <li class="umg_body-listLi">Мишель Омон</li>
                 <li class="umg_body-listLi">Сьюзи Дайсон</li>
