--- a/front-end/index.html
+++ b/front-end/index.html
@@ -46,7 +46,7 @@
                     <label class="umg_body-answerItem"><input name="answer" type="radio">«Неудержимые»</label>
                     <label class="umg_body-answerItem"><input name="answer" type="radio">«Игрушка»</label>
                     <label class="umg_body-answerItem"><input name="answer" type="radio">«Аватар»</label>
-                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Черный лебедь»</label>
+                    <label class="umg_body-answerItem"><input name="answer" type="radio">«Очень длинное название фильма для теста»</label>
                 </form>
                 <div class="umg_body-controls">
                     <div class="umg_button umg_button--secondary">← Назад</div>
