--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,6 +11,7 @@
     <script src="js/vendors.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+    <script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
     <script>
         var umg_data = {
           questions: [
@@ -90,7 +91,7 @@
             </div>
         </div>
 
-        <div class="umg_results" ng-show="gc.finished">
+        <div class="umg_results" ng-show="1||gc.finished">
             <div class="umg_results-title">Вы ответили правильно на {{(gc.questions|correct).length}} из {{gc.questions.length}} вопросов</div>
             <div class="umg_results-caption"></div>
             <div class="umg_results-toggle" ng-hide="gc.showResults">
@@ -108,6 +109,10 @@
                     <td>«{{question.answers[question.correct]}}»</td>
                 </tr>
             </table>
+            <div class="umg_soc">
+                <div class="umg_soc-title">Поделиться с друзьями:</div>
+                <div class="umg_soc-inner" id="umg_soc-inner"></div>
+            </div>
         </div>
 
     </div>
