--- a/front-end/index.html
+++ b/front-end/index.html
@@ -95,7 +95,7 @@
             <div class="umg_results-title">Вы ответили правильно на {{(gc.questions|correct).length}} из {{gc.questions.length}} вопросов</div>
             <div class="umg_results-caption"></div>
             <div class="umg_results-toggle" ng-hide="gc.showResults">
-                <a href="#" ng-click="gc.showResults=true">Показать результаты</a>
+                <a href="#" ng-click="gc.showResults=true">Показать подробные результаты</a>
             </div>
             <table class="umg_results-table" ng-show="gc.showResults">
                 <tr>
