--- a/front-end/index.html
+++ b/front-end/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div class="umg_results" ng-show="1||gc.finished">
+        <div class="umg_results" ng-show="gc.finished">
             <div class="umg_results-title">Вы ответили правильно на {{(gc.questions|correct).length}} из {{gc.questions.length}} вопросов</div>
             <div class="umg_results-caption"></div>
             <div class="umg_results-toggle" ng-hide="gc.showResults">
